--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,19 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+div.preview {
+    margin-left: 1em;
+}
+
+div.preview img {
+    max-width: 400px;
+}
+
+#profile_image_div {
+     float: left;
+     margin-right: 1em;
+}
+
 textarea#statement {
     width: 80em;
     height: 30em;
