--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -3,7 +3,7 @@
     {{ [[_('overview'), 'index'], _('network visualization')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    <link rel="stylesheet" href="/static/node_modules/huebee/dist/huebee.min.css" />
+    <link rel="stylesheet" href="/static/node_modules/huebee/dist/huebee.min.css">
     <script src="/static/node_modules/huebee/dist/huebee.pkgd.min.js"></script>
     {% if json_data %}
         <link rel="stylesheet" href="/static/css/network.css">
