--- a/openatlas/templates/model/network2.html
+++ b/openatlas/templates/model/network2.html
@@ -3,7 +3,8 @@
     {{ [[_('overview'), 'index'], _('network visualization' + ' {dimensions}D'.format(dimensions=dimensions))]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    <link rel="stylesheet" href="/static/node_modules/huebee/dist/huebee.min.css" />
+    <link rel="stylesheet" href="/static/node_modules/huebee/dist/huebee.min.css">
+    <link rel="stylesheet" href="/static/css/network.css">
     <script src="/static/node_modules/huebee/dist/huebee.pkgd.min.js"></script>
     {% if json_data %}
         <script src="/static/vendor/network/preact.umd.js"></script>
