--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -6,8 +6,8 @@
     {% if 'contributor'|is_authorized %}
         <div class="toolbar">
             {{ 'Actor'|manual_link|safe }}
-            {% for code in config['CLASS_CODES']['actor']%}
-                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_insert', code=code) }}">+ {{ code|get_class_name }}</a>
+            {% for code in config['CLASS_CODES']['actor'] %}
+                {{ ('+ ' + code|get_class_name)|button(url_for('actor_insert', code=code)) }}
             {% endfor %}
         </div>
     {% endif %}
