--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -9,7 +9,7 @@
             {{ _('error modified by %(username)s', username=modifier|safe) }}
         </p>
         <p>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_update', id_=actor.id) }}">{{ _('reload')|uc_first }}</a>
+            {{ _('reload')|button(url_for('actor_update', id_=actor.id)) }}
         </p>
     {% endif %}
     {{ form|display_form('', True if actor.class_.code=='E21' else False)|safe }}
