--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -34,6 +34,7 @@
         <div>
             <div style="float:left;">
                 {{ info|display_info|safe }}
+                {{ entity|api_link|safe }}
             </div>
             <div class="preview" style="float:left;">
                 {% if preview %}
