--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -9,120 +9,122 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-    <div id="tabs" class="tabs-container col">
-        <ul>
-            <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-            <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
-            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
+    <div class="col">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item"> <a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
             {% if tables['actor'].rows %}
-                <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
+                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
             {% endif %}
-            <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
-            <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
             {% if object_.system_type == 'place' %}
-                <li><a href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number }}</a></li>
+                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number }}</a></li>
             {% elif object_.system_type == 'feature' %}
-                <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number }}</a></li>
+                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number }}</a></li>
             {% elif object_.system_type == 'stratigraphic unit' %}
-                <li><a href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number }}</a></li>
-                <li><a href="#tab-human-remains">{{ _('human remains')|uc_first }} {{ tables['human-remains']|format_tab_number }}</a></li>
+                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number }}</a></li>
+                <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-human-remains">{{ _('human remains')|uc_first }} {{ tables['human-remains']|format_tab_number }}</a></li>
             {% endif %}
         </ul>
-        <div id="tab-info">
-            <div class="toolbar">
-                {% if 'contributor'|is_authorized %}
-                    {{ _('edit')|button(url_for('place_update', id_=object_.id)) }}
-                    {% if not subunits %}
-                        {{ object_|display_delete_link }}
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+                <div class="toolbar">
+                    {% if 'contributor'|is_authorized %}
+                        {{ _('edit')|button(url_for('place_update', id_=object_.id)) }}
+                        {% if not subunits %}
+                            {{ object_|display_delete_link }}
+                        {% endif %}
                     {% endif %}
+                    {{ object_.id|bookmark_toggle }}
+                </div>
+                <h1>{{ object_.name }}</h1>
+                <div>
+                    {{ profile_image_id|display_profile_image }}
+                    <div style="float:left;">
+                        {{ info|display_info }}
+                        {{ object_|note }}
+                        {{ object_|display_external_references }}
+                        {{ object_|description }}
+                        {{ object_|api_link }}
+                    </div>
+                    <div style="clear:both;"></div>
+                </div>
+            </div>
+            <div class="tab-pane fade" role="tabpanel" id="tab-source">
+                {% if 'contributor'|is_authorized %}
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('place_add_source', id_=object_.id)) }}
+                    {{ _('source')|button(url_for('source_insert', origin_id=object_.id)) }}
+                </div>
                 {% endif %}
-                {{ object_.id|bookmark_toggle }}
+                {{ tables['source'].display('source')|safe }}
             </div>
-            <h1>{{ object_.name }}</h1>
-            <div>
-                {{ profile_image_id|display_profile_image }}
-                <div style="float:left;">
-                    {{ info|display_info }}
-                    {{ object_|note }}
-                    {{ object_|display_external_references }}
-                    {{ object_|description }}
-                    {{ object_|api_link }}
-                </div>
-                <div style="clear:both;"></div>
+            <div class="tab-pane fade" role="tabpanel" id="tab-event">
+                {% if 'contributor'|is_authorized %}
+                    <div class="toolbar">
+                        {% for code in config['CLASS_CODES']['event'] %}
+                            {{ code|get_class_name|button(url_for('event_insert', code=code, origin_id=object_.id)) }}
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                {{ tables['event'].display('event')|safe }}
             </div>
-        </div>
-        <div id="tab-source">
-            {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('place_add_source', id_=object_.id)) }}
-                {{ _('source')|button(url_for('source_insert', origin_id=object_.id)) }}
-            </div>
-            {% endif %}
-            {{ tables['source'].display('source')|safe }}
-        </div>
-        <div id="tab-event">
-            {% if 'contributor'|is_authorized %}
-                <div class="toolbar">
-                    {% for code in config['CLASS_CODES']['event'] %}
-                        {{ code|get_class_name|button(url_for('event_insert', code=code, origin_id=object_.id)) }}
-                    {% endfor %}
+            {% if tables['actor'].rows %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-actor">
+                    {{ tables['actor'].display('actor')|safe }}
                 </div>
             {% endif %}
-            {{ tables['event'].display('event')|safe }}
-        </div>
-        {% if tables['actor'].rows %}
-            <div id="tab-actor">
-                {{ tables['actor'].display('actor')|safe }}
+            <div class="tab-pane fade" role="tabpanel" id="tab-reference">
+                {% if 'contributor'|is_authorized %}
+                    <div class="toolbar">
+                        {{ _('add')|button(url_for('place_add_reference', id_=object_.id)) }}
+                        {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=object_.id)) }}
+                        {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=object_.id)) }}
+                        {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=object_.id)) }}
+                    </div>
+                {% endif %}
+                {{ tables['reference'].display('reference')|safe }}
             </div>
-        {% endif %}
-        <div id="tab-reference">
-            {% if 'contributor'|is_authorized %}
-                <div class="toolbar">
-                    {{ _('add')|button(url_for('place_add_reference', id_=object_.id)) }}
-                    {{ _('bibliography')|button(url_for('reference_insert', code='bibliography', origin_id=object_.id)) }}
-                    {{ _('edition')|button(url_for('reference_insert', code='edition', origin_id=object_.id)) }}
-                    {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=object_.id)) }}
+            <div class="tab-pane fade" role="tabpanel" id="tab-file">
+                {% if 'contributor'|is_authorized %}
+                    <div class="toolbar">
+                        {{ _('add')|button(url_for('place_add_file', id_=object_.id)) }}
+                        {{ _('file')|button(url_for('file_insert', origin_id=object_.id)) }}
+                    </div>
+                {% endif %}
+                {{ tables['file'].display('file')|safe }}
+            </div>
+            {% if object_.system_type == 'place' %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-feature">
+                    <div class="toolbar">
+                        {{ _('feature')|button(url_for('place_insert', origin_id=object_.id)) }}
+                    </div>
+                    {{ tables['feature'].display('feature')|safe }}
+                </div>
+            {% elif object_.system_type == 'feature' %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-stratigraphic-unit">
+                    <div class="toolbar">
+                        {{ _('stratigraphic unit')|button(url_for('place_insert', origin_id=object_.id)) }}
+                    </div>
+                    {{ tables['stratigraphic-unit'].display('stratigraphic-unit')|safe }}
+                </div>
+            {% elif object_.system_type == 'stratigraphic unit' %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-find">
+                    <div class="toolbar">
+                        {{ _('find')|button(url_for('place_insert', origin_id=object_.id)) }}
+                    </div>
+                    {{ tables['find'].display('find')|safe }}
+                </div>
+                <div class="tab-pane fade" role="tabpanel" id="tab-human-remains">
+                    <div class="toolbar">
+                        {{ _('human remains')|button(url_for('place_insert', origin_id=object_.id, system_type='human_remains')) }}
+                    </div>
+                    {{ tables['human-remains'].display('human_remains')|safe }}
                 </div>
             {% endif %}
-            {{ tables['reference'].display('reference')|safe }}
         </div>
-        <div id="tab-file">
-            {% if 'contributor'|is_authorized %}
-                <div class="toolbar">
-                    {{ _('add')|button(url_for('place_add_file', id_=object_.id)) }}
-                    {{ _('file')|button(url_for('file_insert', origin_id=object_.id)) }}
-                </div>
-            {% endif %}
-            {{ tables['file'].display('file')|safe }}
-        </div>
-        {% if object_.system_type == 'place' %}
-            <div id="tab-feature">
-                <div class="toolbar">
-                    {{ _('feature')|button(url_for('place_insert', origin_id=object_.id)) }}
-                </div>
-                {{ tables['feature'].display('feature')|safe }}
-            </div>
-        {% elif object_.system_type == 'feature' %}
-            <div id="tab-stratigraphic-unit">
-                <div class="toolbar">
-                    {{ _('stratigraphic unit')|button(url_for('place_insert', origin_id=object_.id)) }}
-                </div>
-                {{ tables['stratigraphic-unit'].display('stratigraphic-unit')|safe }}
-            </div>
-        {% elif object_.system_type == 'stratigraphic unit' %}
-            <div id="tab-find">
-                <div class="toolbar">
-                    {{ _('find')|button(url_for('place_insert', origin_id=object_.id)) }}
-                </div>
-                {{ tables['find'].display('find')|safe }}
-            </div>
-            <div id="tab-human-remains">
-                <div class="toolbar">
-                    {{ _('human remains')|button(url_for('place_insert', origin_id=object_.id, system_type='human_remains')) }}
-                </div>
-                {{ tables['human-remains'].display('human_remains')|safe }}
-            </div>
-        {% endif %}
     </div>
     <div class="col">
         {% if gis_data %}
