--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -10,9 +10,13 @@
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-general">{{ _('general')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-user">{{ _('user')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-files">{{ _('files')|uc_first }}</a></li>
+            {% if 'manager'|is_authorized %}
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-map">{{ _('map')|uc_first }}</a></li>
+            {% endif %}
             {% if 'admin'|is_authorized %}
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-mail">{{ _('email')|uc_first }}</a></li>
             {% endif  %}
+
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" role="tabpanel" id="tab-general">
@@ -87,6 +91,17 @@
                     {% endif %}
                 </div>
             {% endif  %}
+            {% if 'manager'|is_authorized %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-map">
+                    <div class="toolbar">
+                        {{ 'Map'|manual_link }}
+                        {{ _('edit settings')|button(url_for('admin_map')) }}
+                    </div>
+                    <div>
+                        {{ info.map|display_info }}
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -94,10 +109,7 @@
 
     <div id="admin_index" style="margin-top:2em;">
 
-
-
         {% if 'manager'|is_authorized %}
-            <a href="{{ url_for('admin_map') }}">{{ _('map')|uc_first }}</a>
             <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
             <a href="{{ url_for('admin_logo') }}">{{ _('logo')|uc_first }}</a>
         {% endif %}
