--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -10,6 +10,9 @@
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-general">{{ _('general')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-user">{{ _('user')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-files">{{ _('files')|uc_first }}</a></li>
+            {% if 'contributor'|is_authorized %}
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-data">{{ _('data')|uc_first }}</a></li>
+            {% endif %}
             {% if 'manager'|is_authorized %}
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-map">{{ _('map')|uc_first }}</a></li>
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-content">{{ _('content')|uc_first }}</a></li>
@@ -18,7 +21,7 @@
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-mail">{{ _('email')|uc_first }}</a></li>
             {% endif  %}
         </ul>
-        <div class="tab-content" id="myTabContent">
+        <div class="tab-content">
             <div class="tab-pane fade show active" role="tabpanel" id="tab-general">
                 <div class="toolbar">
                     {{ 'General'|manual_link }}
@@ -119,31 +122,31 @@
                     {% endif %}
                 </div>
             {% endif  %}
+            {% if 'contributor'|is_authorized %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-data">
+                    <h1>{{ _('data integrity')|uc_first }}</h1>
+                    <div class="toolbar">
+                        {{ _('orphans')|button(url_for('admin_orphans')) }}
+                        {{ _('links')|button(url_for('admin_check_links')) }}
+                        {{ _('dates')|button(url_for('admin_check_dates')) }}
+                        {{ _('link duplicates')|button(url_for('admin_check_link_duplicates')) }}
+                        {{ _('similar names')|button(url_for('admin_check_similar')) }}
+                    </div>
+                    <h1>{{ _('data transfer')|uc_first }}</h1>
+                    <div class="toolbar">
+                        {{ _('import')|button(url_for('import_index')) }}
+                        {% if 'manager'|is_authorized %}
+                            {{ 'API'|button(url_for('admin_api')) }}
+                            {{ (_('export') + ' CSV')|button(url_for('export_csv')) }}
+                            {{ (_('export') + ' SQL')|button(url_for('export_sql')) }}
+                        {% endif %}
+                        {% if 'admin'|is_authorized %}
+                            {{ _('execute SQL')|button(url_for('sql_index')) }}
+                        {% endif %}
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
-
-
-    <div id="admin_index" style="margin-top:2em;">
-        {% if 'contributor'|is_authorized %}
-            <h1>{{ _('data transfer')|uc_first }}</h1>
-            {% if 'manager'|is_authorized %}
-                <a href="{{ url_for('admin_api') }}">API</a>
-                <a href="{{ url_for('export_csv') }}">{{ _('export')|uc_first }} CSV</a>
-                <a href="{{ url_for('export_sql') }}">{{ _('export')|uc_first }} SQL</a>
-            {% endif %}
-            <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
-            {% if 'admin'|is_authorized %}
-                <a href="{{ url_for('sql_index') }}">SQL</a>
-            {% endif %}
-        {% endif  %}
-        {% if 'contributor'|is_authorized %}
-            <h1>{{ _('data integrity')|uc_first }}</h1>
-            <a href="{{ url_for('admin_orphans') }}">{{ _('orphans')|uc_first }}</a>
-            <a href="{{ url_for('admin_check_links') }}">{{ _('check links')|uc_first }}</a>
-            <a href="{{ url_for('admin_check_dates') }}">{{ _('check dates')|uc_first }}</a>
-            <a href="{{ url_for('admin_check_link_duplicates')}}">{{ _('check link duplicates')|uc_first }}</a>
-            <a href="{{ url_for('admin_check_similar')}}">{{ _('check similar names')|uc_first }}</a>
-        {% endif %}
-    </div>
 {% endblock %}
