--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -11,7 +11,7 @@
         <script src="/static/node_modules/d3/dist/d3.min.js"></script>
         <div class="toolbar">
             {{ 'tools/network'|manual }}
-            {{ _('download')|button('#', onclick="saveSvgAsPng(d3.select('svg').node(), 'network.png')") }}
+            {{ _('download')|button('#', onclick="saveSvgAsPng(d3.select('#network-svg').node(), 'network.png')") }}
         </div>
         <div>
             <svg id="network-svg"></svg>
