--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -77,41 +77,28 @@
                     </form>
                 </div>
             </div>
-            <div class="iconbutton"
-                 data-toggle="popover"
-                 data-placement="bottom"
-                 title="{{ _('profile')|uc_first }}"
-                 data-content="{{ _('hello')|uc_first }} {{ current_user.username }}"
-                 data-trigger="hover">
-                <a href="{{ url_for('profile_index') }}">
-                    <span><i class="far fa-user"></i></span>
-                </a>
-            </div>
-        {% endif %}
-        {% if 'contact'|display_content_translation %}
-            <div class="iconbutton"
-                 data-toggle="popover"
-                 data-placement="bottom"
-                 data-content="{{ _('contact')|uc_first }}"
-                 data-trigger="hover">
-                <a href="{{ url_for('index_content', item='contact') }}" >
-                    <span>
-                        <i class="fas fa-at"></i>
-                    </span>
-                </a>
-            </div>
-        {% endif %}
-        {% if 'legal_notice'|display_content_translation %}
-            <div class="iconbutton"
-                 data-toggle="popover"
-                 data-placement="bottom"
-                 data-content="{{ _('legal_notice')|uc_first }}"
-                 data-trigger="hover">
-                <a href="{{ url_for('index_content', item='legal_notice') }}" >
-                    <span>
-                        <i class="fas fa-balance-scale"></i>
-                    </span>
-                </a>
+            <div class="iconbutton dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                   aria-expanded="false"><span><i class="far fa-user"></i></span></a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{{ url_for('profile_index') }}">
+                        <span>Profile</span>
+                    </a>
+                    {% if 'contact'|display_content_translation %}
+                        <a class="dropdown-item" href="{{ url_for('index_content', item='contact') }}">
+                            <span>
+                                Contact
+                            </span>
+                        </a>
+                    {% endif %}
+                    {% if 'legal_notice'|display_content_translation %}
+                        <a class="dropdown-item" href="{{ url_for('index_content', item='legal_notice') }}">
+                            <span>
+                                Legal Notice
+                            </span>
+                        </a>
+                    {% endif %}
+                </div>
             </div>
         {% endif %}
         <div class="btn-group btn-group-toggle">
@@ -140,21 +127,24 @@
         </div>
     </div>
 </nav>
-<noscript><div class="error">{{ _('warning no js') }}</div></noscript>
+<noscript>
+    <div class="error">{{ _('warning no js') }}</div>
+</noscript>
 {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
         {% for category, message in messages %}
             <div class="alert alert-{{ category }}" role="alert">
-              {{ message|uc_first }}
+                {{ message|uc_first }}
             </div>
         {% endfor %}
     {% endif %}
 {% endwith %}
 <main>
-    <div id="content" >
+    <div id="content">
         <div style="float:left" class="container-fluid">{% block content %}{% endblock %}</div>
         {% if session['settings']['debug_mode'] and 'admin'|is_authorized %}
-            <div class="data-table" style="float:right;margin:1em;position: absolute;right: 5px;background: rgba(230,219,0,0.4);top: 150px;padding: 5px;">
+            <div class="data-table"
+                 style="float:right;margin:1em;position: absolute;right: 5px;background: rgba(230,219,0,0.4);top: 150px;padding: 5px;">
                 <p>Debug</p>
                 {{ debug_model|display_debug_info(form)|safe }}
             </div>
