--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -98,6 +98,20 @@
                             </span>
                         </a>
                     {% endif %}
+                    {% if current_user.is_authenticated %}
+                        <a class="dropdown-item" href="/admin">
+                            <span>
+                                {{ _('admin')|uc_first }}
+                            </span>
+                        </a>
+                    {% endif %}
+                    {% if current_user.is_authenticated %}
+                        <a class="dropdown-item" href="/logout">
+                            <span>
+                                {{ _('logout')|uc_first }}
+                            </span>
+                        </a>
+                    {% endif %}
                 </div>
             </div>
         {% endif %}
@@ -112,7 +126,6 @@
             {% endfor %}
         </div>
         {% if current_user.is_authenticated %}
-            <a class="btn btn-warning btn-sm" href="/logout">{{ _('logout')|uc_first }}</a>
         {% else %}
             <a class="btn btn-warning btn-sm" href="/login">{{ _('login')|uc_first }}</a>
         {% endif %}
