--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -35,8 +35,7 @@
             <div class="col-xl-8">
                 <div id="map" class="map"></div>
             </div>
-            <script src="/static/node_modules/leaflet-easybutton/dist/easy-button.js"></script>
-            <link rel="stylesheet" href="/static/node_modules/leaflet-draw/dist/leaflet.draw.css"/>
+            <link rel="stylesheet" href="/static/node_modules/leaflet-draw/dist/leaflet.draw.css">
             <script src="/static/node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
             <script src="/static/js/map/map_new.js"></script>
             <script src="/static/js/map/draw_new.js"></script>
