--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/static/node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css">
 <link rel="stylesheet" href="/static/css/map.css">
-<link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.css">
+<link rel="stylesheet" href="/static/vendor/Geonames-0.4.7/L.Control.Geonames.css">
 <link rel="stylesheet" href="/static/node_modules/leaflet/dist/leaflet.css">
 <link rel="stylesheet" href="/static/node_modules/leaflet.markercluster/dist/MarkerCluster.css">
 <link rel="stylesheet" href="/static/node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css">
@@ -61,5 +61,5 @@
 <script src="/static/node_modules/leaflet/dist/leaflet.js"></script>
 <script src="/static/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js" ></script>
 <script src="/static/node_modules/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.js" ></script>
-<script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.js"></script>
+<script src="/static/vendor/Geonames-0.4.7/L.Control.Geonames.js"></script>
 <script src="/static/node_modules/leaflet.fullscreen/Control.FullScreen.js"></script>
