--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -8,26 +8,26 @@
 <link rel="stylesheet" href="/static/node_modules/leaflet.fullscreen/Control.FullScreen.css">
 
 <script>
-    var geoNamesModule =     {{ 'true' if geonames_module else 'false' }};
-    var geoNamesUsername =  '{{ g.settings.geonames_username }}';
-    var gisPointAll =        {{ gis_data.gisPointAll|safe }};
-    var gisPointSupers =     {{ gis_data.gisPointSupers|safe }};
-    var gisPointSubs =       {{ gis_data.gisPointSubs|safe }};
-    var gisPointSibling =    {{ gis_data.gisPointSibling|safe }};
-    var gisPointSelected =   {{ gis_data.gisPointSelected|safe }};
-    var gisLineAll =         {{ gis_data.gisLineAll|safe }};
-    var gisLineSelected =    {{ gis_data.gisLineSelected|safe }};
-    var gisPolygonAll =      {{ gis_data.gisPolygonAll|safe }};
-    var gisPolygonSelected = {{ gis_data.gisPolygonSelected|safe }};
-    var gisPolygonPointSelected = {{ gis_data.gisPolygonPointSelected|safe }};
-    var gisAllSelected =    {{ gis_data.gisAllSelected|safe }};
-    var jsonSearch = [];
-    var translate = [];
-    var mapMaxZoom             = {{ current_user.settings.map_zoom_max }}
-    var mapDefaultZoom         =  {{ current_user.settings.map_zoom_default }}
-    var map_update_mode = false;  // enables e.g. edit buttons in popup ups if true
-    var maxClusterRadius        = {{ g.settings.map_cluster_max_radius }};
-    var disableClusteringAtZoom = {{ g.settings.map_cluster_disable_at_zoom }};
+    const geoNamesModule =     {{ 'true' if geonames_module else 'false' }};
+    const geoNamesUsername =  '{{ g.settings.geonames_username }}';
+    const gisPointAll =        {{ gis_data.gisPointAll|safe }};
+    const gisPointSupers =     {{ gis_data.gisPointSupers|safe }};
+    const gisPointSubs =       {{ gis_data.gisPointSubs|safe }};
+    const gisPointSibling =    {{ gis_data.gisPointSibling|safe }};
+    const gisPointSelected =   {{ gis_data.gisPointSelected|safe }};
+    const gisLineAll =         {{ gis_data.gisLineAll|safe }};
+    const gisLineSelected =    {{ gis_data.gisLineSelected|safe }};
+    const gisPolygonAll =      {{ gis_data.gisPolygonAll|safe }};
+    const gisPolygonSelected = {{ gis_data.gisPolygonSelected|safe }};
+    const gisPolygonPointSelected = {{ gis_data.gisPolygonPointSelected|safe }};
+    const gisAllSelected =     {{ gis_data.gisAllSelected|safe }};
+    const jsonSearch = [];
+    const translate = [];
+    const mapMaxZoom             =  {{ current_user.settings.map_zoom_max }}
+    const mapDefaultZoom         =  {{ current_user.settings.map_zoom_default }}
+    const map_update_mode = false;  // enables e.g. edit buttons in popup ups if true
+    const maxClusterRadius        = {{ g.settings.map_cluster_max_radius }};
+    const disableClusteringAtZoom = {{ g.settings.map_cluster_disable_at_zoom }};
     translate.save    = '{{ _('save')|uc_first|safe }}';
     translate.edit    = '{{ _('edit')|uc_first|safe }}';
     translate.delete  = '{{ _('delete')|uc_first|safe }}';
